update refresh tokens (with get request) + swagger
